src/assets/map-styles/sitmun-base/style/sitmun_specifics.css
:root {
  /*--ide-main-color: #bc986a; /* -- BROWN */
  /*--ide-main-color: #c38d9e; /* -- PINK */
  --ide-main-color: #ff9300; /* -- ORANGE */
}

.login-page {
  background-image: url(assets/logos/logo_b_l.png);
  background-position: bottom;
  background-size: 70%;
  background-repeat: no-repeat;
}

.right-panel > h1 {
  top: 204px;
}

.right-panel > .panel-content, .silme-panel > .panel-content {
  top: 80px;
  height: 100%;
}

.tc-ctl.tc-ctl-nav {
  top: 14px;
}

.tc-ctl.tc-ctl-nav-home {
  top: 98px;
}

.tc-ctl-fscreen {
  top: 140px !important;
}

.silme-panel > h1 {
  top: 204px;
}

.tc-ctl-sv {
  top: 268px !important;
}

#legend-tab {
  top: 310px;
}

#ovmap-tab {
  top: 352px;
}

#search {
  padding-left: 0.4em;
}

#search > a {
  display: none;
}

#search.tc-ctl.tc-ctl-search.search-left-collapsed {
  left: 410px;
}

.tc-ctl-sv-btn {
  background-color: #000000cc;
}

li.tc-ctl-lcat-node > button.tc-ctl-lcat-btn-info {
  right: 0;
  background: none;
  color: var(--sec-btn-color);
  cursor: pointer;
  z-index: 10000;
  font-size: 100%;
  border: 0;
  padding: 0 0.4em
}

.tc-ctl-lcat .tc-ctl-lcat-info-close:after {
  content: '\2716';
  font-size: unset;
}

.tc-ctl-lcat .tc-ctl-lcat-info h3:before {
  font-family: mapskin;
  content: '\e024';
  font-size: unset;
}

.tc-ctl-lcat-info h4 {
  margin: 0.5em 0 0.2em 0;
  text-transform: unset;
}

.slide-panel > h1#silme-tab {
  background-color: var(--ide-main-color);
}

#arbol li.sitmun-folder span:hover {
  color: var(--ide-main-color);
}

@media screen and (min-height: 40em) and (pointer: fine), screen and (min--moz-device-pixel-ratio:0) and (min-height:40em) {

  .tc-ctl-lcat .tc-ctl-lcat-info-close {
    font-size: 1.3em;
  }

}

@media (max-width: 768px) {
  .tools-panel > h1 {
    top: 84px;
  }

  #search {
    left: 20px;
  }

  #legend-tab {
    top: 168px;
  }

  .left-collapsed .tc-ctl-sv {
    left: 20px;
    top: 215px !important;
  }

  .tc-ctl-lcat-info {
    height: calc(100% - 40px);
    width: 100%;
    max-height: unset;
    top: 40px;
    left: 0px;
    border-radius: 0px;
  }

  #projects {
    height: calc(100% - 40px);
    width: 100%;
    max-height: 100%;
    top: 40px;
    left: 0;
    bottom: 0;
    right: 0;
    overflow: auto;
  }
}

